opencga-app/app/scripts/azure/arm/nsg/azuredeploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "variables": {},
    "resources": [
        {
            "name": "nsg-default",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "securityRules": [
                    {
                        "name": "http_in",
                        "properties": {
                            "description": "Allow all inbound HTTP traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 3100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https_in",
                        "properties": {
                            "description": "Allow all inbound HTTPS traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 3101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ssh_in",
                        "properties": {
                            "description": "Allow all SSH traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 3102,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name" : "outbound_all",
                        "properties" : {
                            "description": "Allow all outbound traffic.",
                            "protocol" : "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "nsg-solr",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "securityRules": []
            }
        },
        {
            "name": "nsg-averecluster",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "securityRules": []
            }
        },
        {
            "name": "nsg-mongodb",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {},
            "properties": {
                "securityRules": [
                    {
                        "name": "http_in",
                        "properties": {
                            "description": "Allow all inbound HTTP traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 3100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "https_in",
                        "properties": {
                            "description": "Allow all inbound HTTPS traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 3101,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }
    ]
}
